--- a/paper.tex
+++ b/paper.tex
@@ -88,14 +88,45 @@ them.
 We analysed at the following CAPTCHA methods using the above mentioned
 parameters. These are popular methods are currently in deployment.
 %TODO add images
-\begin{description}
-	\item Align object
-	\item Blurred Text
-	\item Context based
-	\item Audio based
-	\item IP tracking
-	\item Image identification
-	\item Proof of work based
-\end{itemize}
+
+\subsubsection{Align object}
+Objects in various degrees of misalignments are displayed to the user and are
+asked to chose the one that is perfectly aligned.
+		% Example GitHub/Kik inverted Hipop
+
+\subsubsection{Blurred Text}
+A sequence of randomly generated letters and digits are 
+		presented to the user with added noise, scattered distribution and
+		rotations. Sometimes, they are also presented in 3D form. 
+
+\subsubsection{Context based}
+This method is personalised to the platforms they are displayed on. They usually
+pose challenges which can only be solved if the user is familiar with the
+platforms. Some examples are:
+	\begin{itemize}
+		\item What is the name of the website's mascot?  
+		\item Who owns this website?
+		\item What are our members collectively called?(example: Reddit users are
+			called Redditors)
+	\end{itemize}
+
+\subsubsection{Audio based}
+A audio recording with added noise is presented to the user who is asked to
+transcribe the content of the recording.
+
+\subsubsection{IP tracking}
+IP address is used to blacklist misbehaving users. Strictly speaking, this isn't
+a CAPTCHA method but is frequently used in conjunction with other methods.
+
+\subsubsection{Image identification}
+A blurred image with added noise or unusual cropping is presented to the user
+who is requested to identify the object in it. Sometimes, the users are also
+asked to pick images that match a certain description from a collection of
+images.
+
+\subsubsection{Proof of Work based}
+This is an alternative to CAPTCHA method that has been used for rate-limiting.
+The user agent is presented with a challenge and is tasked generate a
+cryptographic proof which computationally expensive.
 
 \end{document}
