--- a/paper.tex
+++ b/paper.tex
@@ -1,24 +1,21 @@
 \documentclass[conference]{IEEEtran} 
-\usepackage[english]{babel} % To obtain English text with the blindtext package
-\usepackage{blindtext}
+%\usepackage[english]{babel} % To obtain English text with the blindtext package
+%\usepackage{blindtext}
 \begin{document}
+
 \title{Analysis of bot detection and spam prevention systems} 
-% TODO get author names from Prof. Sibi
-\author {
-	\IEEEauthorblockN{Aravinth Manivannan, Sibi Chakkaravarth S, TODO}
-	\IEEEauthorblockA{SENSE, VIT AP, AP, India - pincode\\
-		foo@example.com
-	}
-}
+
+\author{\IEEEauthorblockN{Aravinth Manivannan, Sibi Chakkaravarthi}
+\IEEEauthorblockA{VIT AP SENSE}}
 \maketitle
 
 \begin{abstract}
 	CAPTCHA systems were originally designed to protect against automated
-	bot-based Denial of Service(DoS) attacks and spam. But over time, these
+	bot-based Denial of Service (DoS) attacks and spam. But over time, these
 	systems have become ineffective due to overfocus on identifying humans from
 	bots than combating DoS attacks and spam. As a result, they have become
 	privacy invasive systems that pose accessibility challenges with reduced
-	effectiveness and accuracy. mCaptcha is a proof of work based,
+	effectiveness and accuracy.\ mCaptcha is a proof of work based,
 	non-interactive DoS protection system designed to overcome the limitations
 	of traditional CAPTCHA systems' limitations while offering superior
 	protection services. The mechanism is stateless, so it is able accurately
@@ -27,10 +24,8 @@
 	visual disabilities.
 \end{abstract}
  
-\section{Introduction}
-\label{sec:intro}
-
-Denial of Service(DoS) attacks and spam campaigns reduce the quality of service
+\section{Introduction}\label{sec:intro}
+Denial of Service (DoS) attacks and spam campaigns reduce the quality of service
 for internet services. Different types of rate-limiters were employed to combat
 such attacks. Today rate-limiters on the web are synonymous with CAPTCHAs.
 CAPTCHA systems work on the premise that an automated bot user can inflict more
@@ -59,7 +54,7 @@ them.
 \item[Privacy] 
 	\begin{itemize}
 		\item Does the method use trackers or any other identifying method?
-		\item Does the method work in anonymous networks like TOR?
+		\item Does the method work in anonymous networks like TOR?\
 	\end{itemize}
 \item[Effectiveness]
 	\begin{itemize}
@@ -106,7 +101,7 @@ platforms. Some examples are:
 	\begin{itemize}
 		\item What is the name of the website's mascot?  
 		\item Who owns this website?
-		\item What are our members collectively called?(example: Reddit users are
+		\item What are our members collectively called? (example: Reddit users are
 			called Redditors)
 	\end{itemize}
 
