--- a/analysis/align-obj.tex
+++ b/analysis/align-obj.tex
@@ -8,7 +8,10 @@ Good\\
 The method relies on Optical Character Recognition (OCR) capabilities of human
 users. OCR technology is becoming increasingly sophisticated which would render
 this method ineffective in the future.
-Object  Recognition Technology is becoming
+
+Without OCR, this method can be bypassed using human-powered CAPTCHA farms with
+% TODO cite CAPTCHA farm cost analysis paper
+ease. On an average, farms generate one CAPTCHA solution every 40 seconds
 \subsubsection{Accessibility}
 \subsubsection{Accuracy}
 \subsubsection{Privacy}
