--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -34,6 +34,7 @@ The rest of this paper, rates different CAPTCHA mechanisms and systems based on
 parameters mentioned below and describe how mCaptcha overcomes some of
 them. 
 
+\input{intro/scale.tex}
 % ==================================================
 %					Parameters
 % ==================================================
