--- a/intro/methods.tex
+++ b/intro/methods.tex
@@ -1,11 +1,11 @@
 \subsection{CAPTCHA methods analysed}
-We analysed at the following CAPTCHA methods using the above mentioned
+We analysed at the following CAPTCHA methods using the above-mentioned
 parameters. These are popular methods are currently in deployment.
 %TODO add images
 
 \subsubsection{Align object}
 Objects in various degrees of misalignments are displayed to the user and are
-asked to chose the one that is perfectly aligned.
+asked to choose the one that is perfectly aligned.
 		% Example GitHub/Kik inverted Hipop
 
 \subsubsection{Blurred Text}
