--- a/pre-req/captcha-farms.tex
+++ b/pre-req/captcha-farms.tex
@@ -1,9 +1,9 @@
 \subsection{CAPTCHA farms}
 CAPTCHA farms are run using cheap labor available in third-world countries. When
-an attacker seeks the services of a CAPTCHA farm, they are provided access to an
+an attacker seeks the services of a CAPTCHA farm, they are provided access to a
 web API to forward CAPTCHA challenges. A labourer working in the farm solves the
 CAPTCHA and the API responds with the solution. The whole process takes less
-then a minute to complete and costs only a fraction of what premium services
+than a minute to complete and costs only a fraction of what premium services
 like reCAPTCHA charge.
 
 Overall, this attack is very feasible and cheap and is frequently used to bypass
