blur text, context and conclusion

--- a/intro/methods.tex
+++ b/intro/methods.tex
@@ -6,14 +6,14 @@ parameters. These are popular methods are currently in deployment.
 \subsubsection{Align object}
 Objects in various degrees of misalignments are displayed to the user and are
 asked to choose the one that is perfectly aligned.
-		% Example GitHub/Kik inverted Hipop
+		% Example GitHub/Kik inverted Hippo
 
-\subsubsection{Blurred Text}
-A sequence of randomly generated letters and digits are 
-		presented to the user with added noise, scattered distribution and
-		rotations. Sometimes, they are also presented in 3D form. 
+\subsubsection{Noisy Text}
+A sequence of randomly generated letters and digits are presented to the user
+with added noise, scattered distribution and rotations. Sometimes, they are also
+presented in 3D form.
 
-\subsubsection{Context based}
+\subsubsection{Context-based}
 This method is personalised to the platforms they are displayed on. They usually
 pose challenges which can only be solved if the user is familiar with the
 platforms. Some examples are:
