pow, audio and ip

--- a/analysis/context.tex
+++ b/analysis/context.tex
@@ -32,5 +32,5 @@ success. But when above-mentioned circumvention methods are used, there will be
 results will be completely inaccurate and as the system lacks any adaptational
 capabilities, the failure will be long-lasting.  
 
-The method uses only challenge answers in its decision process. No other
+The method uses only challenge solutions in its decision process. No other
 external factors are involved.
