--- a/analysis/main.tex
+++ b/analysis/main.tex
@@ -2,3 +2,6 @@
 \input{analysis/align-obj.tex}
 \input{analysis/blur-text.tex}
 \input{analysis/context.tex}
+\input{analysis/ip-based.tex}
+\input{analysis/audio-based.tex}
+\input{analysis/pow.tex}
