recaptcha and mcaptcha case studies

--- a/paper.tex
+++ b/paper.tex
@@ -12,6 +12,7 @@
 \input{intro/intro.tex}
 \input{pre-req/main.tex}
 \input{analysis/main.tex}
+\input{case-studies/main.tex}
 
 \input{conclusion.tex}
 \end{document}
